conformance/tests/httproute-request-mirror-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: request-mirror
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: infra-backend-v1
      namespace: gateway-conformance-infra
      port: 8080
      filters:
      - type: RequestMirror
        requestMirror:
          backendRef:
            name: infra-backend-v2
            namespace: gateway-conformance-infra
            port: 8080
